Вытаскиваем прикрепленные файлы - начало